k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sr-cache
  labels:
    app: sr-cache
spec:
  type: ClusterIP
  selector:
    app: sr-cache
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
